New PerceptronLearning.h file created to implement Perceptron Learning Model

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -3,4 +3,4 @@ project(bin)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(bin main.cpp McCullochPitts_NeuronModel.h)
+add_executable(bin main.cpp McCullochPitts_NeuronModel.h PerceptronLearning.h)
